# pypy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Justfile  README.md  docker-compose.md  docker-compose.yaml  env.example  pyproject.toml
nginx/: nginx.conf
sandbox/: __init__.py
sandbox/appointment/: __init__.py  controller.py  gateway.py  handlers.py  repository.py
sandbox/appointment/e2e/: core-mvp-20260319T170333Z-happy.md  core-mvp-20260319T173841Z-happy.md  core-mvp-20260319T213245Z-happy.md  core-mvp-20260319T233431Z-happy.md  e2e-20260320T051727Z.md
sandbox/document/: __init__.py  controller.py  gateway.py  handlers.py  repository.py
sandbox/document/e2e/: sandbox-document-crud-template.md
scripts/: init-db.sql
src/backend/: main.py  main_test.py  settings.py
src/backend/controller/: README.md  __init__.py  appointment_controller.py  appointment_controller_test.py  document_controller.py  document_controller_test.py  job_controller.py  job_controller_test.py
src/backend/core/: __init__.py  appointment_workflow.py  appointment_workflow_test.py  config.py  document_workflow.py  document_workflow_test.py
src/backend/db/: init-db.sql  postgres.py  postgres_test.py
src/frontend/: index.html  package.json  tsconfig.json
tests/: template_readiness_test.py  test_backend_appointment_workflow.py  test_backend_document_workflow.py  test_backend_web_rest_main.py  test_core_document_workflow.py  test_core_workflow.py  test_main.py  test_sandbox_appointment_workflow.py  test_sandbox_document_workflow.py
(+36 files in other folders)
