[project]
name = "pypy"
version = "0.1.0"
description = "A Python FastAPI Template"
authors = [
    {name = "Bryan Baek", email = "seungkwan.baek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn>=0.31.1",
    "openai>=1.51.2",
    "groq>=0.11.0",
    "google-generativeai>=0.8.3",
    "python-dotenv>=1.0.1",
    "mypy>=1.11.2",
    "ruff>=0.6.9",
    "ty>=0.0.24",
    "pre-commit>=4.0.1",
    "pylint>=3.3.1",
    "typing-extensions>=4.12.2",
    "pydantic>=2.9.2",
    "httpx>=0.27.2",
    "python-socketio>=5.11.4",
    "socketio>=0.2.1",
    "pymongo>=4.10.1",
    "motor>=3.3.2",
    "asyncpg>=0.29.0",
    "python-dateutil>=2.9.0.post0",
    "pytest>=8.0.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
